# src/app/services/swagger.json
@@ -5,13 +5,13 @@
     "version": "1.0",
     "title": "Zé Delivery Challenge"
   },
-  "host": "localhost:3030",
+  "host": "localhost:3000",
   "tags": [
     { "name": "Partner", "description": "Features to handle de partner data." }
   ],
   "schemes": ["http"],
   "paths": {
-    "/partner/{partnerCode}": {
+    "/api/v1/partner/{partnerCode}": {
       "get": {
         "tags": ["Partner"],
         "summary": "Get data about a specific partner",
@@ -42,7 +42,7 @@
         }
       }
     },
-    "/partner/nearest/{longitude}/{latitude}": {
+    "/api/v1/partner/nearest/{longitude}/{latitude}": {
       "get": {
         "tags": ["Partner"],
         "summary": "Search the nearest partner which the coverage area includes the specific location",
@@ -79,8 +79,30 @@
           }
         }
       }
-    }
-  },
+    },
+    "/api/v1/": {
+      "get": {
+        "tags": ["Partner"],
+        "summary": "teste",
+        "description": "",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Partner"
+            }
+          },
+          "404": {
+            "description": "Action canceled! No partner found",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+        }
+      }
+    },
   "definitions": {
     "Partner": {
       "type": "object",
