# src/routes.js
@@ -1,8 +1,8 @@
 const express = require('express');
 const routes = express.Router();
+const ctrl = require('./app/services/controllers')
 
-routes.get("/", (req, res)=>{
-  res.status(200).send('Hello Zé!')
-});
+routes.get("/partner/:partnerCode", ctrl.partnerController.Show);
+routes.get("/partner/nearest/:longitude/:latitude", ctrl.partnerController.Search);
 
 module.exports = routes;
